syntax = "proto3";

package service;

option go_package = "github.com/TasSM/appCache/svcgrpc";

// Service to expose the cache operations
service ArrayBasedCache {
  rpc CreateRecord (CreateRecordRequest) returns (CreateRecordResponse) {}
  rpc StoreMessage (AppendRecordRequest) returns (AppendRecordResponse) {}
  rpc GetStatistics (Empty) returns (StatisticResponse) {}
  rpc GetRecord (GetRecordRequest) returns (stream MessageResponse) {}
}

message CreateRecordRequest {
  string key = 1;
  int32 ttl = 2;
}

message CreateRecordResponse {
  string key = 1;
  int32 ttl = 2;
}

message AppendRecordRequest {
  string key  = 1;
  string message = 2; 
}

message AppendRecordResponse {
  bool status = 1;
}

message GetRecordRequest {
  string key = 1;
}

message MessageResponse {
  string message = 1;
}

message Empty {}

message StatisticResponse {
  int32 recordCount = 1;
  int32 activeConnections = 2;
  string lastUpdate = 3;
}
